# memplex

./: .gitignore  README.md  UPSTREAM.md  pyproject.toml
docs/: experiment-ledger.md  limitations.md
memplex/: __init__.py  optimizer.py
memplex/experiments/: lr_confound.py  multiagent.py  regimes.py  transition.py
memplex/fisher/: regime.py  spectrum.py
tests/: test_experiments.py  test_multiagent.py  test_regime.py  test_spectrum.py
